--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,43 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-334.7KB/s(Youtube:不良林), server: 107.167.24.6, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-546.4KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇨🇳 中国-1.53MB/s(Youtube:不良林), server: mc.xiaohouzi.club, port: 28325, type: vmess, uuid: c900facf-7e5d-3caf-a49e-c4bb1996ca95, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: mc.xiaohouzi.club}}
-  - {name: 🇨🇳 中国-10.93MB/s(Youtube:不良林), server: shcu.alinkrelay.com, port: 44608, type: trojan, password: 673c8e50-d1c4-4e1f-ae6f-3c694e769006, sni: shcu.alinkrelay.com, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-871.4KB/s(Youtube:不良林), server: 144.91.109.75, port: 443, type: ss, cipher: chacha20-ietf-poly1305, password: revC4XzAemkX}
+  - {name: 🇺🇸 美国-2.43MB/s(Youtube:不良林), server: au2-3.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-3.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-156.7KB/s(Youtube:不良林), server: 107.167.24.6, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.95MB/s(Youtube:不良林), server: xjp.ziqiyun.xyz, port: 443, type: trojan, password: 7b561e94-42f3-4f92-979c-4cf97c328025, sni: xjp.ziqiyun.xyz, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-989.3KB/s(Youtube:不良林), server: 144.91.109.71, port: 443, type: ss, cipher: chacha20-ietf-poly1305, password: V8stXKscUpkN}
+  - {name: 🇨🇳 中国-9.13MB/s(Youtube:不良林), server: shcu.alinkrelay.com, port: 44608, type: trojan, password: 673c8e50-d1c4-4e1f-ae6f-3c694e769006, sni: shcu.alinkrelay.com, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-471.9KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇷🇺 俄罗斯联邦-340.1KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇺🇸 美国-3.25MB/s(Youtube:不良林), server: 212.81.47.12, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.54MB/s(Youtube:不良林), server: 152.89.210.105, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
+  - {name: 🇫🇷 法国-1.29MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-334.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-546.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.93MB/s(Youtube:不良林)
-      - 🇩🇪 德国-871.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-156.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
+      - 🇩🇪 德国-989.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.13MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-471.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-340.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.54MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.29MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-334.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-546.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.93MB/s(Youtube:不良林)
-      - 🇩🇪 德国-871.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-156.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
+      - 🇩🇪 德国-989.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.13MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-471.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-340.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.54MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.29MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-334.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-546.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.93MB/s(Youtube:不良林)
-      - 🇩🇪 德国-871.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-156.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
+      - 🇩🇪 德国-989.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.13MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-471.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-340.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.54MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.29MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -52,32 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-334.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-546.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.93MB/s(Youtube:不良林)
-      - 🇩🇪 德国-871.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-156.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
+      - 🇩🇪 德国-989.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.13MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-471.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-340.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.54MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.29MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-334.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-546.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.93MB/s(Youtube:不良林)
-      - 🇩🇪 德国-871.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-156.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
+      - 🇩🇪 德国-989.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.13MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-471.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-340.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.54MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.29MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-334.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-546.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.93MB/s(Youtube:不良林)
-      - 🇩🇪 德国-871.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-156.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
+      - 🇩🇪 德国-989.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.13MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-471.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-340.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.54MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.29MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -93,11 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-334.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-546.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.93MB/s(Youtube:不良林)
-      - 🇩🇪 德国-871.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-156.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
+      - 🇩🇪 德国-989.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.13MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-471.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-340.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.54MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.29MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
