--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,15 +6,15 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇬🇧 英国-1.74MB/s(Youtube:不良林), server: 152.89.210.105, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
-  - {name: 🇺🇸 美国-1.93MB/s(Youtube:不良林), server: xjp.ziqiyun.xyz, port: 443, type: trojan, password: 7b561e94-42f3-4f92-979c-4cf97c328025, sni: xjp.ziqiyun.xyz, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.71MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇩🇪 德国-989.3KB/s(Youtube:不良林), server: 144.91.109.71, port: 443, type: ss, cipher: chacha20-ietf-poly1305, password: V8stXKscUpkN}
   - {name: 🇩🇪 德国-800.4KB/s(Youtube:不良林), server: 144.91.109.75, port: 443, type: ss, cipher: chacha20-ietf-poly1305, password: revC4XzAemkX}
-  - {name: 🇨🇳 中国-969.8KB/s(Youtube:不良林), server: mc.xiaohouzi.club, port: 28325, type: vmess, uuid: c900facf-7e5d-3caf-a49e-c4bb1996ca95, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: mc.xiaohouzi.club}}
   - {name: 🇧🇷 巴西-2.27MB/s(Youtube:不良林), server: fr.n.optage.moe, port: 44612, type: trojan, password: 673c8e50-d1c4-4e1f-ae6f-3c694e769006, sni: fr.n.optage.moe, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-381.7KB/s(Youtube:不良林), server: au2-3.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-3.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-969.2KB/s(Youtube:不良林), server: mc.xiaohouzi.club, port: 28325, type: vmess, uuid: c900facf-7e5d-3caf-a49e-c4bb1996ca95, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: mc.xiaohouzi.club}}
   - {name: 🇨🇳 中国-315.8KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
   - {name: 🇬🇧 英国-940.2KB/s(Youtube:不良林), server: 152.89.210.105, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
   - {name: 🇦🇺 澳大利亚-337.6KB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.78MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.36MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -22,30 +22,30 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇬🇧 英国-1.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.71MB/s(Youtube:不良林)
-      - 🇩🇪 德国-989.3KB/s(Youtube:不良林)
       - 🇩🇪 德国-800.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-969.8KB/s(Youtube:不良林)
       - 🇧🇷 巴西-2.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-381.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-969.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-315.8KB/s(Youtube:不良林)
       - 🇬🇧 英国-940.2KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-337.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
       - 🇬🇧 英国-1.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.71MB/s(Youtube:不良林)
-      - 🇩🇪 德国-989.3KB/s(Youtube:不良林)
       - 🇩🇪 德国-800.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-969.8KB/s(Youtube:不良林)
       - 🇧🇷 巴西-2.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-381.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-969.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-315.8KB/s(Youtube:不良林)
       - 🇬🇧 英国-940.2KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-337.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -53,15 +53,15 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇬🇧 英国-1.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.71MB/s(Youtube:不良林)
-      - 🇩🇪 德国-989.3KB/s(Youtube:不良林)
       - 🇩🇪 德国-800.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-969.8KB/s(Youtube:不良林)
       - 🇧🇷 巴西-2.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-381.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-969.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-315.8KB/s(Youtube:不良林)
       - 🇬🇧 英国-940.2KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-337.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,30 +73,30 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇬🇧 英国-1.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.71MB/s(Youtube:不良林)
-      - 🇩🇪 德国-989.3KB/s(Youtube:不良林)
       - 🇩🇪 德国-800.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-969.8KB/s(Youtube:不良林)
       - 🇧🇷 巴西-2.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-381.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-969.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-315.8KB/s(Youtube:不良林)
       - 🇬🇧 英国-940.2KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-337.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇬🇧 英国-1.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.71MB/s(Youtube:不良林)
-      - 🇩🇪 德国-989.3KB/s(Youtube:不良林)
       - 🇩🇪 德国-800.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-969.8KB/s(Youtube:不良林)
       - 🇧🇷 巴西-2.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-381.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-969.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-315.8KB/s(Youtube:不良林)
       - 🇬🇧 英国-940.2KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-337.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -104,15 +104,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇬🇧 英国-1.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.71MB/s(Youtube:不良林)
-      - 🇩🇪 德国-989.3KB/s(Youtube:不良林)
       - 🇩🇪 德国-800.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-969.8KB/s(Youtube:不良林)
       - 🇧🇷 巴西-2.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-381.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-969.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-315.8KB/s(Youtube:不良林)
       - 🇬🇧 英国-940.2KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-337.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,15 +129,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇬🇧 英国-1.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.71MB/s(Youtube:不良林)
-      - 🇩🇪 德国-989.3KB/s(Youtube:不良林)
       - 🇩🇪 德国-800.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-969.8KB/s(Youtube:不良林)
       - 🇧🇷 巴西-2.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-381.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-969.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-315.8KB/s(Youtube:不良林)
       - 🇬🇧 英国-940.2KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-337.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
