--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,80 +5,79 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.78MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-544.5KB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇨🇳 中国-5.57MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
   - {name: 🇺🇸 美国-1.87MB/s(Youtube:不良林), server: 212.81.47.12, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
   - {name: 🇺🇸 美国-719.4KB/s(Youtube:不良林), server: kr01.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr01.wangxd.life, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-329.9KB/s(Youtube:不良林), server: 144.91.109.75, port: 443, type: ss, cipher: chacha20-ietf-poly1305, password: revC4XzAemkX}
+  - {name: 🇷🇺 俄罗斯联邦-208.4KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇺🇸 美国-230.1KB/s(Youtube:不良林), server: 212.81.47.11, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-544.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-719.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-329.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-208.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-230.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-544.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-719.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-329.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-208.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-230.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-544.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-719.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-329.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-208.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-230.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-544.5KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-544.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-719.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-329.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-208.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-230.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-544.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-719.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-329.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-208.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-230.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-544.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-719.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-329.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-208.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-230.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -94,11 +93,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-544.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-719.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-329.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-208.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-230.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
